--- a/src/pages/PhotoPost.css
+++ b/src/pages/PhotoPost.css
@@ -9,6 +9,7 @@
     right: 50%;
     margin-left: -50vw;
     margin-right: -50vw;
+    margin-top: 2rem;
     height: 65vh;
     min-height: 400px;
     max-height: 900px;
@@ -22,7 +23,8 @@
     display: flex;
     width: 100%;
     height: 100%;
-    transition: transform 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    transition: transform 0.6s cubic-bezier(0.25, 1, 0.5, 1);
+    will-change: transform;
 }
 
 .carousel-slide {
